src/app/(payload)/custom.scss
.blocks-field__block-header {
	@apply items-center;
}

.heading-layout {
	@apply flex h-[54px] items-center;
}

.blocks-drawer__blocks {
	@apply grid grid-cols-[repeat(auto-fill,minmax(200px,1fr))];
}

